Update template values for new buildscript

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,10 +6,11 @@ mod_author=wendall911
 cf_release_type=release
 minecraft_version=1.18.2
 minecraft_short_version=1.18
+minecraft_version_range=[1.18.2,1.19)
 release_versions=1.18.2
 forge_version=40.1.81
 forge_version_range=[40,)
-loader_version=[40,)
+loader_version_range=[40,)
 mappings_version=2022.09.04-1.18.2
 mappings_channel=parchment
 mixin_version=0.8.5
@@ -21,3 +22,4 @@ terrablender_version=3816497
 byg_version=3956521
 patchouli_version=1.18.2-71.1
 patchouli_provider_version=1.18.2-1.0.6-Snapshot.4
+cf_versions=1.18.2
