--- a/gradle.properties
+++ b/gradle.properties
@@ -7,10 +7,10 @@ cf_release_type=release
 cf_versions=1.19,1.19.1,1.19.2
 minecraft_version=1.19.2
 minecraft_short_version=1.19
-minecraft_version_range=[1.19,)
+minecraft_version_range=[1.19,1.19.3)
 forge_version=43.1.52
 forge_version_range=[41,)
-loader_version=[41,)
+loader_version_range=[41,)
 mappings_version=2022.11.06
 mappings_channel=parchment
 mixin_version=0.8.5
