--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ minecraft_short_version=1.19
 minecraft_version_range=[1.19.3,1.19.4)
 forge_version=44.1.23
 forge_version_range=[44,)
-loader_version=[44,)
+loader_version_range=[44,)
 mappings_version=2023.03.12
 mappings_channel=parchment
 mixin_version=0.8.5
