--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ minecraft_short_version=1.19
 minecraft_version_range=[1.19.4,1.20)
 forge_version=45.1.0
 forge_version_range=[45,)
-loader_version=[45,)
+loader_version_range=[45,)
 mappings_version=1.19.3-2023.03.12
 mappings_channel=parchment
 mixin_version=0.8.5
