--- a/build.gradle
+++ b/build.gradle
@@ -133,6 +133,7 @@ dependencies {
         //runtimeOnly fg.deobf("curse.maven:puzzleslib-495476:4582313")
         //runtimeOnly fg.deobf("curse.maven:leavemybarsalone-281715:4555067")
         //runtimeOnly fg.deobf("curse.maven:scuba_gear-399090:4442000")
+        //runtimeOnly fg.deobf("curse.maven:kobolds-484967:4611264")
     }
 }
 
@@ -263,6 +264,7 @@ task curseforge(type: net.darkhax.curseforgegradle.TaskPublishCurseForge) {
         mainFile.addOptional('create')
         mainFile.addOptional('patchouli')
         mainFile.addOptional('scuba-gear')
+        mainFile.addOptional('kobolds')
     }
 }
 
@@ -292,6 +294,7 @@ modrinth {
 			optional.project "patchouli"
 			optional.project "jei"
 			optional.project "biomesyougo"
+			optional.project "kobolds"
         }
     }
 }
