--- a/build.gradle
+++ b/build.gradle
@@ -132,7 +132,8 @@ dependencies {
         //runtimeOnly fg.deobf("curse.maven:fruittrees-355467:3990227")
         //runtimeOnly fg.deobf("curse.maven:puzzleslib-495476:4017925")
         //runtimeOnly fg.deobf("curse.maven:leavemybarsalone-281715:4023020")
-        runtimeOnly fg.deobf("curse.maven:scuba_gear-399090:3901488")
+        //runtimeOnly fg.deobf("curse.maven:scuba_gear-399090:3901488")
+        //runtimeOnly fg.deobf("curse.maven:kobolds-484967:4592588")
     }
 }
 
@@ -263,6 +264,7 @@ task curseforge(type: net.darkhax.curseforgegradle.TaskPublishCurseForge) {
         mainFile.addOptional('create')
         mainFile.addOptional('patchouli')
         mainFile.addOptional('scuba-gear')
+        mainFile.addOptional('kobolds')
     }
 }
 
@@ -292,6 +294,7 @@ modrinth {
 			optional.project "patchouli"
 			optional.project "jei"
 			optional.project "biomesyougo"
+			optional.project "kobolds"
         }
     }
 }
