--- a/build.gradle
+++ b/build.gradle
@@ -135,6 +135,7 @@ dependencies {
         //runtimeOnly fg.deobf("curse.maven:puzzleslib-495476:4582313")
         //runtimeOnly fg.deobf("curse.maven:leavemybarsalone-281715:4555067")
         //runtimeOnly fg.deobf("curse.maven:scuba_gear-399090:4593711")
+        //runtimeOnly fg.deobf("curse.maven:kobolds-484967:4632499")
     }
 }
 
@@ -265,6 +266,7 @@ task curseforge(type: net.darkhax.curseforgegradle.TaskPublishCurseForge) {
         mainFile.addOptional('create')
         mainFile.addOptional('patchouli')
         mainFile.addOptional('scuba-gear')
+        mainFile.addOptional('kobolds')
     }
 }
 
@@ -294,6 +296,7 @@ modrinth {
 			optional.project "patchouli"
 			optional.project "jei"
 			optional.project "biomesyougo"
+			optional.project "kobolds"
         }
     }
 }
