--- a/build.gradle
+++ b/build.gradle
@@ -134,6 +134,7 @@ dependencies {
         //runtimeOnly fg.deobf("curse.maven:puzzleslib-495476:3804332")
         //runtimeOnly fg.deobf("curse.maven:leavemybarsalone-281715:3671258")
         //runtimeOnly fg.deobf("curse.maven:scuba_gear-399090:3680208")
+        //runtimeOnly fg.deobf("curse.maven:kobolds-484967:4019488")
     }
 }
 
@@ -264,6 +265,7 @@ task curseforge(type: net.darkhax.curseforgegradle.TaskPublishCurseForge) {
         mainFile.addOptional('create')
         mainFile.addOptional('patchouli')
         mainFile.addOptional('scuba-gear')
+        mainFile.addOptional('kobolds')
     }
 }
 
@@ -293,6 +295,7 @@ modrinth {
 			optional.project "patchouli"
 			optional.project "jei"
 			optional.project "biomesyougo"
+			optional.project "kobolds"
         }
     }
 }
