--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,27 @@
-mod_name=Homeostatic
-modid=homeostatic
+# Gradle
+org.gradle.jvmargs=-Xmx2048M
+org.gradle.daemon=false
+
+# Project
 mod_version=2.9.3.1
 last_mod_version=2.9.3.0
-mod_author=wendall911
-cf_release_type=release
-cf_versions=1.20.1
+
+# Common
 minecraft_version=1.20.1
 minecraft_short_version=1.20
 minecraft_version_range=[1.20,1.20.2)
+mixin_version=0.8.5
+
+# Forge
 forge_version=47.0.45
 forge_version_range=[46.0.0,)
 loader_version_range=[46,)
+
+# Mappings
 mappings_version=2023.06.26
 mappings_channel=parchment
-mixin_version=0.8.5
+
+# Other mods
 serene_seasons_version=4611122
 simpletextoverlay_version=4618486
 bop_version=4617260
@@ -26,3 +34,14 @@ patchouli_version=1.20.1-80
 patchouli_provider_version=1.20.1-1.0.9-Snapshot.1
 create_version=4626108
 ars_version=4641979
+
+# Mod options
+mod_name=Homeostatic
+modid=homeostatic
+mod_author=wendall911
+license=MIT
+issue_tracker=https://github.com/wendall911/ReadyPlayerFun/issues
+
+# CurseForge/Modrinth Options
+release_type=release
+release_versions=1.20,1.20.1
