Backport temperature application from 1.19.4. Set minimum BOP and BYG versions. Add support for twilight forest.

--- a/build.gradle
+++ b/build.gradle
@@ -99,10 +99,11 @@ dependencies {
     annotationProcessor "org.spongepowered:mixin:${mixin_version}:processor"
 
     implementation fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jei_version}")
-    implementation fg.deobf("curse.maven:sereneseasons-291874:${serene_seasons_version}")
-    implementation fg.deobf("curse.maven:biomesoplenty-220318:${bop_version}")
-    implementation fg.deobf("curse.maven:terrablender-563928:${terrablender_version}")
-    implementation fg.deobf("curse.maven:byg-247560:${byg_version}")
+    compileOnly fg.deobf("curse.maven:sereneseasons-291874:${serene_seasons_version}")
+    compileOnly fg.deobf("curse.maven:biomesoplenty-220318:${bop_version}")
+    compileOnly fg.deobf("curse.maven:terrablender-563928:${terrablender_version}")
+    compileOnly fg.deobf("curse.maven:byg-247560:${byg_version}")
+    compileOnly fg.deobf("curse.maven:twilightforest-227639:${twilight_forest_version}")
     compileOnly fg.deobf("curse.maven:create-328085:4011414")
     implementation fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
     implementation fg.deobf("xyz.brassgoggledcoders:PatchouliProvider:${patchouli_provider_version}")
@@ -113,6 +114,13 @@ dependencies {
     else {
         runtimeOnly fg.deobf("curse.maven:simpletextoverlay-321283:${simpletextoverlay_version}")
         runtimeOnly fg.deobf("curse.maven:configured-457570:3947885")
+        //runtimeOnly fg.deobf("curse.maven:sereneseasons-291874:${serene_seasons_version}")
+        //runtimeOnly fg.deobf("curse.maven:terrablender-563928:${terrablender_version}")
+        //runtimeOnly fg.deobf("curse.maven:biomesoplenty-220318:${bop_version}")
+        //runtimeOnly fg.deobf("curse.maven:corgilib-693313:4554111")
+        //runtimeOnly fg.deobf("curse.maven:geckolib-388172:4407241")
+        //runtimeOnly fg.deobf("curse.maven:byg-247560:${byg_version}")
+        //runtimeOnly fg.deobf("curse.maven:twilightforest-227639:${twilight_forest_version}")
         //runtimeOnly fg.deobf("curse.maven:botania-225643:???")
         //runtimeOnly fg.deobf("curse.maven:patchouli-306770:3936481")
         //runtimeOnly fg.deobf("curse.maven:curios-309927:3924518")
@@ -123,7 +131,6 @@ dependencies {
         //runtimeOnly fg.deobf("curse.maven:sophisticated_core-618298:3960016")
         //runtimeOnly fg.deobf("curse.maven:sophisticated_backpacks-422301:3960033")
         //runtimeOnly fg.deobf("curse.maven:ecologics-570463:3939727")
-        //runtimeOnly fg.deobf("curse.maven:geckolib-388172:3950255")
         //runtimeOnly fg.deobf("curse.maven:sprout-565856:3967673")
         //runtimeOnly fg.deobf("curse.maven:arsnouveau-401955:3950796")
         //runtimeOnly fg.deobf("curse.maven:create-328085:4011414")
