--- a/gradle.properties
+++ b/gradle.properties
@@ -16,9 +16,10 @@ mappings_channel=parchment
 mixin_version=0.8.5
 serene_seasons_version=3871433
 simpletextoverlay_version=3995717
-bop_version=4032228
+bop_version=4473556
 terrablender_version=4013816
-byg_version=4027228
+byg_version=4602115
 jei_version=11.3.0.262
 patchouli_version=1.19.2-77
 patchouli_provider_version=1.19-1.0.7-Snapshot.2
+twilight_forest_version=4389567
