--- a/gradle.properties
+++ b/gradle.properties
@@ -34,6 +34,7 @@ patchouli_version=1.20.1-80
 patchouli_provider_version=1.20.1-1.0.9-Snapshot.1
 create_version=4626108
 ars_version=4641979
+twilightforest_version=4653704
 
 # Mod options
 mod_name=Homeostatic
