Add TF import for testing.

--- a/gradle.properties
+++ b/gradle.properties
@@ -25,3 +25,4 @@ jei_version=13.1.0.13
 patchouli_version=1.19.4-79
 patchouli_provider_version=1.19.4-1.0.9-Snapshot.4
 create_version=???
+twilightforest_version=4539671
