--- a/build.gradle
+++ b/build.gradle
@@ -108,13 +108,14 @@ dependencies {
         //runtimeOnly fg.deobf("curse.maven:create-328085:${create_version}")
     }
     else {
-        runtimeOnly fg.deobf("curse.maven:simpletextoverlay-321283:${simpletextoverlay_version}")
-        runtimeOnly fg.deobf("curse.maven:configured-457570:4462839")
+        //runtimeOnly fg.deobf("curse.maven:simpletextoverlay-321283:${simpletextoverlay_version}")
+        //runtimeOnly fg.deobf("curse.maven:configured-457570:4462839")
         //runtimeOnly fg.deobf("curse.maven:biomesoplenty-220318:${bop_version}")
         //runtimeOnly fg.deobf("curse.maven:terrablender-563928:${terrablender_version}")
         //runtimeOnly fg.deobf("curse.maven:byg-247560:${byg_version}")
         //runtimeOnly fg.deobf("curse.maven:corgilib-693313:${corgilib_version}")
         //runtimeOnly fg.deobf("software.bernie.geckolib:geckolib-forge-${minecraft_version}:${geckolib_version}")
+        //runtimeOnly fg.deobf("curse.maven:twilightforest-227639:${twilightforest_version}")
         //runtimeOnly fg.deobf("curse.maven:botania-225643:???")
         //runtimeOnly fg.deobf("curse.maven:curios-309927:4523020")
         //runtimeOnly fg.deobf("curse.maven:croptopia-415438:4512807")
