--- a/build.gradle
+++ b/build.gradle
@@ -98,7 +98,7 @@ dependencies {
 
     compileOnly fg.deobf("mezz.jei:jei-${minecraft_version}:${jei_version}:api")
     compileOnly fg.deobf("curse.maven:create-328085:4007544")
-    implementation fg.deobf("curse.maven:sereneseasons-291874:${serene_seasons_version}")
+    compileOnly fg.deobf("curse.maven:sereneseasons-291874:${serene_seasons_version}")
     implementation fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
     implementation fg.deobf("xyz.brassgoggledcoders:PatchouliProvider:${patchouli_provider_version}")
 
@@ -109,6 +109,8 @@ dependencies {
     else {
         runtimeOnly fg.deobf("mezz.jei:jei-${minecraft_version}:${jei_version}")
         runtimeOnly fg.deobf("curse.maven:simpletextoverlay-321283:${simpletextoverlay_version}")
+        //runtimeOnly fg.deobf("curse.maven:sereneseasons-291874:${serene_seasons_version}")
+        //runtimeOnly fg.deobf("curse.maven:primalwinter-393321:4044096")
         //runtimeOnly fg.deobf("curse.maven:crafttweaker-239197:${crafttweaker_version}")
         //runtimeOnly fg.deobf("curse.maven:terrablender-563928:${terrablender_version}")
         //runtimeOnly fg.deobf("curse.maven:byg-247560:${byg_version}")
@@ -265,10 +267,9 @@ task curseforge(type: net.darkhax.curseforgegradle.TaskPublishCurseForge) {
         mainFile.addOptional('patchouli')
         mainFile.addOptional('scuba-gear')
         mainFile.addOptional('kobolds')
+        mainFile.addOptional('primal-winter')
     }
 }
-
-tasks.curseforge.dependsOn build
 
 modrinth {
     if (project.hasProperty('hsModrinthId')) {
@@ -295,8 +296,7 @@ modrinth {
 			optional.project "jei"
 			optional.project "biomesyougo"
 			optional.project "kobolds"
+            optional.project "primal-winter"
         }
     }
 }
-
-tasks.modrinth.dependsOn build
