--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,27 @@
-mod_name=Homeostatic
-modid=homeostatic
+# Gradle
+org.gradle.jvmargs=-Xmx2048M
+org.gradle.daemon=false
+
+# Version
 mod_version=2.6.8.2
 last_mod_version=2.6.8.1
-mod_author=wendall911
-cf_release_type=release
-cf_versions=1.19.2
+
+# Common
 minecraft_version=1.19.2
 minecraft_short_version=1.19
-minecraft_version_range=[1.19.2,1.19.3)
-forge_version=43.1.52
+mixin_version=0.8.5
+
+# Forge
+forge_version=43.2.21
 forge_version_range=[41,)
+forge_mc_version_range=[1.19.2,1.19.3)
 loader_version_range=[41,)
+
+# Mappings
 mappings_version=2022.11.06
 mappings_channel=parchment
-mixin_version=0.8.5
+
+# Other mods
 serene_seasons_version=3871433
 simpletextoverlay_version=3995717
 bop_version=4473556
@@ -23,3 +31,17 @@ jei_version=11.3.0.262
 patchouli_version=1.19.2-77
 patchouli_provider_version=1.19-1.0.7-Snapshot.2
 twilight_forest_version=4389567
+
+# Mod options
+mod_id=homeostatic
+mod_name=Homeostatic
+mod_author=wendall911
+mod_credits=ashar42
+license=MIT
+issue_tracker=https://github.com/wendall911/Homeostatic/issues
+mod_description=A mod about body temperature and moisture. Achieving homeostasis after a little trial and error.
+mod_update_branch=1.18.2
+
+# CurseForge/Modrinth Options
+release_type=release
+release_versions=1.19.2
