Update build script in preparation for multiloader support.

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,17 +1,16 @@
 modLoader="javafml"
 loaderVersion="${loader_version_range}"
-issueTrackerURL="https://github.com/wendall911/Homeostatic/issues"
-license="MIT"
+issueTrackerURL="${issue_tracker}"
+license="${license}"
 
 [[mods]]
-  modId="homeostatic"
-  displayName="Homeostatic"
-  description="A mod about body temperature and moisture. Achieving homeostasis after a little trial and error."
+  modId="${mod_id}"
+  displayName="${mod_name}"
+  description="${mod_description}"
   version="${version}"
-  displayURL="https://github.com/wendall911/Homeostatic"
-  updateJSONURL="https://raw.githubusercontent.com/wendall911/Homeostatic/1.19/files/updates.json"
-  authors="wendall911"
-  credits="ashar42"
+  updateJSONURL="https://raw.githubusercontent.com/wendall911/Homeostatic/${mod_update_branch}/files/updates.json"
+  authors="${mod_author}"
+  credits="${mod_credits}"
   logoFile="logo.png"
   itemIcon="minecraft:bubble_column"
 
@@ -24,6 +23,6 @@ license="MIT"
 [[dependencies.homeostatic]]
     modId="minecraft"
     mandatory=true
-    versionRange="${minecraft_version_range}"
+    versionRange="${forge_mc_version_range}"
     ordering="NONE"
     side="BOTH"
