--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,27 @@
-mod_name=Homeostatic
-modid=homeostatic
+# Gradle
+org.gradle.jvmargs=-Xmx2048M
+org.gradle.daemon=false
+
+# Version
 mod_version=2.8.4.2
 last_mod_version=2.8.4.1
-mod_author=wendall911
-cf_release_type=release
-cf_versions=1.19.4
+
+# Common
 minecraft_version=1.19.4
 minecraft_short_version=1.19
-minecraft_version_range=[1.19.4,1.20)
-forge_version=45.1.0
-forge_version_range=[45,)
-loader_version_range=[45,)
-mappings_version=1.19.3-2023.03.12
-mappings_channel=parchment
 mixin_version=0.8.5
+
+# Forge
+forge_version=45.1.16
+forge_version_range=[45,)
+forge_mc_version_range=[1.19.4,1.20)
+loader_version_range=[45,)
+
+# Mappings
+mappings_version=1.19.3-2023.06.25
+mappings_channel=parchment
+
+# Other mods
 serene_seasons_version=4577600
 simpletextoverlay_version=4572065
 bop_version=4573241
@@ -26,3 +34,17 @@ patchouli_version=1.19.4-79
 patchouli_provider_version=1.19.4-1.0.9-Snapshot.4
 create_version=???
 twilightforest_version=4539671
+
+# Mod options
+mod_id=homeostatic
+mod_name=Homeostatic
+mod_author=wendall911
+mod_credits=ashar42
+license=MIT
+issue_tracker=https://github.com/wendall911/Homeostatic/issues
+mod_description=A mod about body temperature and moisture. Achieving homeostasis after a little trial and error.
+mod_update_branch=1.18.2
+
+# CurseForge/Modrinth Options
+release_type=release
+release_versions=1.19.4
