--- a/gradle.properties
+++ b/gradle.properties
@@ -9,12 +9,12 @@ last_mod_version=2.9.4.1
 # Common
 minecraft_version=1.20.1
 minecraft_short_version=1.20
-minecraft_version_range=[1.20,1.20.2)
 mixin_version=0.8.5
 
 # Forge
 forge_version=47.0.45
 forge_version_range=[46.0.0,)
+forge_mc_version_range=[1.20,1.20.2)
 loader_version_range=[46,)
 
 # Mappings
@@ -41,7 +41,9 @@ mod_name=Homeostatic
 modid=homeostatic
 mod_author=wendall911
 license=MIT
-issue_tracker=https://github.com/wendall911/ReadyPlayerFun/issues
+issue_tracker=https://github.com/wendall911/Homeostatic/issues
+mod_description=A mod about body temperature and moisture. Achieving homeostasis after a little trial and error.
+mod_update_branch=1.20.1
 
 # CurseForge/Modrinth Options
 release_type=release
