--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,27 @@
-mod_name=Homeostatic
-modid=homeostatic
+# Gradle
+org.gradle.jvmargs=-Xmx2048M
+org.gradle.daemon=false
+
+# Version
 mod_version=1.3.6.0
 last_mod_version=1.3.5.8
-mod_author=wendall911
-cf_release_type=release
+
+# Common
 minecraft_version=1.18.2
 minecraft_short_version=1.18
-minecraft_version_range=[1.18.2,1.19)
-release_versions=1.18.2
+mixin_version=0.8.5
+
+# Forge
 forge_version=40.1.81
 forge_version_range=[40,)
+forge_mc_version_range=[1.18.2,1.19)
 loader_version_range=[40,)
+
+# Mappings
 mappings_version=2022.09.04-1.18.2
 mappings_channel=parchment
-mixin_version=0.8.5
+
+# Other mods
 serene_seasons_version=3693808
 simpletextoverlay_version=3918106
 jei_version=9.7.+
@@ -22,4 +30,17 @@ terrablender_version=3816497
 byg_version=3956521
 patchouli_version=1.18.2-71.1
 patchouli_provider_version=1.18.2-1.0.6-Snapshot.4
-cf_versions=1.18.2
+
+# Mod options
+mod_id=homeostatic
+mod_name=Homeostatic
+mod_author=wendall911
+mod_credits=ashar42
+license=MIT
+issue_tracker=https://github.com/wendall911/Homeostatic/issues
+mod_description=A mod about body temperature and moisture. Achieving homeostasis after a little trial and error.
+mod_update_branch=1.18.2
+
+# CurseForge/Modrinth Options
+release_type=release
+release_versions=1.18.2
