--- a/build.gradle
+++ b/build.gradle
@@ -111,6 +111,7 @@ dependencies {
         //runtimeOnly fg.deobf("curse.maven:configured-457570:4462839")
         runtimeOnly fg.deobf("curse.maven:biomesoplenty-220318:${bop_version}")
         runtimeOnly fg.deobf("curse.maven:terrablender-563928:${terrablender_version}")
+        //runtimeOnly fg.deobf("curse.maven:primalwinter-393321:4575861")
         //runtimeOnly fg.deobf("curse.maven:byg-247560:${byg_version}")
         //runtimeOnly fg.deobf("curse.maven:corgilib-693313:${corgilib_version}")
         //runtimeOnly fg.deobf("software.bernie.geckolib:geckolib-forge-${minecraft_version}:${geckolib_version}")
@@ -266,6 +267,7 @@ task curseforge(type: net.darkhax.curseforgegradle.TaskPublishCurseForge) {
         mainFile.addOptional('patchouli')
         mainFile.addOptional('scuba-gear')
         mainFile.addOptional('kobolds')
+        mainFile.addOptional('primal-winter')
     }
 }
 
@@ -294,6 +296,7 @@ modrinth {
 			optional.project "jei"
 			optional.project "biomesyougo"
 			optional.project "kobolds"
+            optional.project "primal-winter"
         }
     }
 }
