--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.jvmargs=-Xmx2048M
 org.gradle.daemon=false
 
 # Project
-mod_version=2.9.4.2
-last_mod_version=2.9.4.1
+mod_version=2.9.4.3
+last_mod_version=2.9.4.2
 
 # Common
 minecraft_version=1.20.1
@@ -38,8 +38,9 @@ twilightforest_version=4653704
 
 # Mod options
 mod_name=Homeostatic
-modid=homeostatic
+mod_id=homeostatic
 mod_author=wendall911
+mod_credits=ashar42
 license=MIT
 issue_tracker=https://github.com/wendall911/Homeostatic/issues
 mod_description=A mod about body temperature and moisture. Achieving homeostasis after a little trial and error.
