--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@ minecraft_short_version=1.18
 mixin_version=0.8.5
 
 # Forge
-forge_version=40.1.81
+forge_version=40.2.10
 forge_version_range=[40,)
 forge_mc_version_range=[1.18.2,1.19)
 loader_version_range=[40,)
@@ -23,13 +23,15 @@ mappings_channel=parchment
 
 # Other mods
 serene_seasons_version=3693808
-simpletextoverlay_version=3918106
+simpletextoverlay_version=4735829
 jei_version=9.7.+
 crafttweaker_version=3971901
 terrablender_version=3816497
 byg_version=3956521
 patchouli_version=1.18.2-71.1
 patchouli_provider_version=1.18.2-1.0.6-Snapshot.4
+mantle_version=1.9.45
+tic_version=3.6.4.113
 
 # Mod options
 mod_id=homeostatic
